# verso

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.nix  Cargo.toml  Info.plist  LICENSE-MIT  README.md  build.rs  cargo-sources.json  demo.html  flake.nix  flatpak-cargo-generator.py  org.versotile.verso.desktop  org.versotile.verso.yml  rust-toolchain.toml  rustfmt.toml  setup.bat  setup.sh  shell.nix
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  doc.yml  merge-queue.yml  publish_nightly.yml  pull-request.yml  release-versoview.yml
etc/: package_libs.py  verso.entitlements
resources/: alert.html  context_menu.html  directory-listing.html  panel.html  prefs.json  prompt_test.html  servo.css  user-agent.css  yes_no.html
resources/components/: alert.html  bookmark.html  context_menu.html  downloads.html  history_menu.html  panel.html  prompt_test.html
resources/components/prompt/: alert.html  allow_deny.html  http_basic_auth.html  ok_cancel.html  prompt.css  prompt.html  prompt_test.html  yes_no.html
src/: app.rs  bookmark.rs  compositor.rs  config.rs  context_menu.rs  download.rs  embedder.rs  error.rs  errors.rs  keyboard.rs  lib.rs  main.rs  painter.rs  prefs.rs  proxy.rs  rendering.rs  rendering_context.rs  resources.rs  storage.rs  tab.rs  test.rs  touch.rs  verso.rs  web_context.rs  webview.rs  window.rs
src/components/: context_menu.rs  mod.rs  prompt.rs
src/compositor/: compositor.rs  gl.rs  mod.rs  tracing.rs  webview.rs  windowing.rs
src/servo/: embedder.rs  mod.rs  resources.rs
src/shader/: fragment.glsl  vertex.glsl
src/utils/: content_disposition_parser.rs  mod.rs
src/webview/: context_menu.rs  history_menu.rs  mod.rs  prompt.rs  webview.rs  webview_menu.rs
tests/: general.rs
verso/: Cargo.toml  build.rs
verso/examples/: simple.rs
verso/src/: builder.rs  lib.rs  main.rs
versoview/: Cargo.toml
versoview_build/: Cargo.toml  README.md
versoview_build/src/: lib.rs
versoview_messages/: Cargo.toml
versoview_messages/src/: lib.rs
