[workspace]
members = ["verso", "versoview_messages"]

[workspace.dependencies]
ipc-channel = "0.19"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }

[package]
name = "versoview"
version = "0.0.1"
authors = ["Wu Yu Wei"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "An innovative web browser"
readme = "README.md"
homepage = "https://versotile.org/verso"
repository = "https://github.com/versotile-org/verso"
documentation = "https://docs.versotile.org/verso"
categories = ["web-programming"]

[package.metadata.packager]
name = "verso"
product-name = "verso"
identifier = "org.versotile.verso"
version = "0.0.1"
before-each-package-command = "python etc/package_libs.py"
resources = [
  "resources",
  "icons",
  "target/release/build/**/libEGL.dll",
  "target/release/build/**/libGLESv2.dll",
  "target/release/lib",
]
icons = ["icons/icon256x256.png", "icons/icon.ico"]

[package.metadata.packager.nsis]
appdata-paths = ["$LOCALAPPDATA/$IDENTIFIER"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "x86_64-apple-darwin",
]

[features]
default = []
packager = ["dep:cargo-packager-resource-resolver"]
flatpak = []

[build-dependencies]
cfg_aliases = "0.2"

[dependencies]
arboard = "3.4.0"
crossbeam-channel = "0.5"
env_logger = "0.11"
euclid = "0.22"
getopts = "0.2.17"
gleam = "0.15"
glutin = "0.32.0"
glutin-winit = "0.5.0"
ipc-channel = { workspace = true }
keyboard-types = "0.7"
log = "0.4"
raw-window-handle = { version = "0.6", features = ["std"] }
sparkle = "0.1.26"
thiserror = "1.0"
winit = { version = "0.30", features = ["rwh_06"] }
# Servo repo crates
base = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
bluetooth = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
bluetooth_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
canvas = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
compositing_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
constellation = { git = "https://github.com/servo/servo.git", rev = "dd9164f", features = ["webgpu"] }
devtools = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
embedder_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
fonts = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
layout_thread_2020 = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
media = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
net = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
net_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
profile = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
profile_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
script = { git = "https://github.com/servo/servo.git", rev = "dd9164f", features = ["webgpu"] }
script_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
servo_config = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
servo_geometry = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
servo_url = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
webdriver_server = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
webrender_traits = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
webgpu = { git = "https://github.com/servo/servo.git", rev = "dd9164f" }
# Servo org crates
servo-media = { git = "https://github.com/servo/media" }
servo-media-dummy = { git = "https://github.com/servo/media" }
style = { git = "https://github.com/servo/stylo", branch = "2024-12-04", features = ["servo"] }
style_traits = { git = "https://github.com/servo/stylo", branch = "2024-12-04", features = ["servo"] }
webrender = { git = "https://github.com/servo/webrender", branch = "0.65", features = ["capture"] }
webrender_api = { git = "https://github.com/servo/webrender", branch = "0.65" }
# Packager feature
cargo-packager-resource-resolver = { version = "0.1.1", features = [
  "auto-detect-format",
], optional = true }
url = { workspace = true }
headers = "0.3"
versoview_messages = { path = "./versoview_messages" }
serde_json = "1.0"
serde = { workspace = true }
mime = "0.3"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
muda = "0.15"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2.2", features = ["NSThread"] }
objc2-app-kit = { version = "0.2", features = [
  "NSView",
  "NSResponder",
  "NSWindow",
] }

[[test]]
name = "general"
harness = false

[profile.release-lto]
inherits = "release"
lto = true

# Tell clippy to allow e.g. #[cfg(macos)]
[lints.clippy]
mismatched_target_os = "allow"
