[package]
name = "verso"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
ipc-channel = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
http = { workspace = true }
log = { workspace = true }
dpi = { workspace = true }
versoview_messages = { path = "../versoview_messages" }
