[package]
name = "verso"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
ipc-channel = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
http = { workspace = true }
log = { workspace = true }
dpi = { workspace = true }
uuid = { workspace = true }
versoview_messages = { path = "../versoview_messages" }

[build-dependencies]
versoview_build = { path = "../versoview_build" }
